# SevenTest

./: CMakeLists.txt  Library.cpp  Library.h  README.md  Right.cpp  Right.h  Role.cpp  Role.h  Test.cpp  User.cpp  User.h  index.xml  main.cpp
SevenTest/: Library.cpp  Library.h  Right.cpp  Right.h  Role.cpp  Role.h  User.cpp  User.h
